updating package json file

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio_reactjs",
-  "homepage": "https://gsharma101.github.io/pf_rj",
+  "homepage": "https://gsharma101.github.io/pf_rj/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
