adding multiple componenets

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio_reactjs",
-  "homepage": "https://gsharma101.github.io/pfrj",
+  "homepage": "https://gsharma101.giclearthub.io/pfrj",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
